🌊first method to visualise data from api
